# polars-types

./: .gitignore  LICENSE  README.md  __init__.py  attribute_extract.py  attributes.py  cat.parquet  complex_frame.py  int.parquet  integers.py  pyproject.toml  requirements.txt  run_mypy.py  setup.py  str.parquet  str_lit.parquet  test_type_storage.py
.github/: dependabot.yml  strings.py
.github/workflows/: pre-release-hook.yml
categorical_compress/: __init__.py
integer_compress/: __init__.py  convert_integers.py  downcast_strings.py  readme.txt
polarstypes/: __init__.py  attribute_extract.py  attributes.py  compress.py  custom_pivot.py  integers.py  relaxed_concat.py  strings.py
typed/polarstypes/: __init__.pyi  compress.pyi  integers.pyi  relaxed_concat.pyi  strings.pyi
