[tool.poetry]
name = "polarstypes"
version = "0.2.3"
description = "This library is for utility functions around the polars dataframe library, particularly compressing integer datatypes and also string to categorical."
authors = ["Isaac Moore <isaacmooreuky@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
polars = "^0.18.13"

[tool.poetry.dev-dependencies]
numpy = "^1.25.2"

[tool.poetry.scripts]
typecheck = "polarstypes.run_mypy:run_mypy"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pytype = "^2023.8.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
